fix alignment of sidebar title
sort out alignment of both 'in this section' and college name links the
same in the sidebar.

--- a/assets/styles/components/_sidebar.scss
+++ b/assets/styles/components/_sidebar.scss
@@ -15,7 +15,7 @@
 		margin-left: 0;
 		li {
 			border-bottom:1px dotted $light-gray;
-  		padding-bottom: 0;
+  			padding-bottom: 0;
 			a {
 				@include font-size(14);
 				padding: 10px 12px;  
@@ -38,12 +38,13 @@
 			@include font-size(18);
 			line-height: 24px;
 			border-bottom: 0;
+			padding: 0 0 rhythm(2, 18px) 12px;
 			a {
 				@extend %Swiss721BT-Bold;
 				@include font-size(18);
 				line-height: 24px;
-				padding: 0 0 rhythm(2, 18px) 12px;
 				border-bottom: 0;
+				padding: 0;
 			}
 			a:hover { background-color: $white; }
 		}
