--- a/media/beta/beta-assets/css/screen.css
+++ b/media/beta/beta-assets/css/screen.css
@@ -6559,25 +6559,26 @@ input[type="text"].sb-search-input {
   font-size: 1.125rem;
   line-height: 24px;
   border-bottom: 0;
+  padding: 0 0 0.66667em 12px;
 }
-/* line 41, ../../../../assets/styles/components/_sidebar.scss */
+/* line 42, ../../../../assets/styles/components/_sidebar.scss */
 .sidebar ul li.menu-heading a {
   font-size: 18px;
   font-size: 1.125rem;
   line-height: 24px;
-  padding: 0 0 0.66667em 12px;
   border-bottom: 0;
+  padding: 0;
 }
-/* line 48, ../../../../assets/styles/components/_sidebar.scss */
+/* line 49, ../../../../assets/styles/components/_sidebar.scss */
 .sidebar ul li.menu-heading a:hover {
   background-color: white;
 }
-/* line 51, ../../../../assets/styles/components/_sidebar.scss */
+/* line 52, ../../../../assets/styles/components/_sidebar.scss */
 .sidebar a {
   display: block;
 }
 
-/* line 57, ../../../../assets/styles/components/_sidebar.scss */
+/* line 58, ../../../../assets/styles/components/_sidebar.scss */
 .mobile-sidebar {
   *zoom: 1;
   position: relative;
@@ -6595,17 +6596,17 @@ input[type="text"].sb-search-input {
 .mobile-sidebar:after {
   clear: both;
 }
-/* line 64, ../../../../assets/styles/components/_sidebar.scss */
+/* line 65, ../../../../assets/styles/components/_sidebar.scss */
 .mobile-sidebar nav, .mobile-sidebar ul {
   display: none;
 }
-/* line 66, ../../../../assets/styles/components/_sidebar.scss */
+/* line 67, ../../../../assets/styles/components/_sidebar.scss */
 .mobile-sidebar ul li {
   background-color: #e9e9e9;
   border-bottom: 1px solid #c8c8c8;
   padding: 0;
 }
-/* line 71, ../../../../assets/styles/components/_sidebar.scss */
+/* line 72, ../../../../assets/styles/components/_sidebar.scss */
 .mobile-sidebar ul li a {
   width: 100%;
   line-height: 24px;
@@ -6613,51 +6614,51 @@ input[type="text"].sb-search-input {
   padding: 12px;
   border-bottom: none;
 }
-/* line 80, ../../../../assets/styles/components/_sidebar.scss */
+/* line 81, ../../../../assets/styles/components/_sidebar.scss */
 .mobile-sidebar ul li.external:after {
   display: none;
 }
-/* line 85, ../../../../assets/styles/components/_sidebar.scss */
+/* line 86, ../../../../assets/styles/components/_sidebar.scss */
 .mobile-sidebar .mob-sb-dd-title {
   position: absolute;
   top: 24px;
   left: 12px;
 }
-/* line 91, ../../../../assets/styles/components/_sidebar.scss */
+/* line 92, ../../../../assets/styles/components/_sidebar.scss */
 .mobile-sidebar:first-child {
   display: block;
 }
 @media only screen and (min-width: 960px) {
-  /* line 57, ../../../../assets/styles/components/_sidebar.scss */
+  /* line 58, ../../../../assets/styles/components/_sidebar.scss */
   .mobile-sidebar {
     display: none;
   }
 }
 
-/* line 102, ../../../../assets/styles/components/_sidebar.scss */
+/* line 103, ../../../../assets/styles/components/_sidebar.scss */
 .currentbranch0 a {
   color: #757575;
   border-bottom: 0;
 }
-/* line 105, ../../../../assets/styles/components/_sidebar.scss */
+/* line 106, ../../../../assets/styles/components/_sidebar.scss */
 .currentbranch0 a:hover {
   border-bottom: 0;
 }
 
-/* line 111, ../../../../assets/styles/components/_sidebar.scss */
+/* line 112, ../../../../assets/styles/components/_sidebar.scss */
 .multilevel-linkul-0 {
   font-size: 14px;
   font-size: 0.875rem;
   margin-left: 24px;
   padding: 0;
 }
-/* line 116, ../../../../assets/styles/components/_sidebar.scss */
+/* line 117, ../../../../assets/styles/components/_sidebar.scss */
 .multilevel-linkul-0 li:last-child {
   margin-bottom: 0;
   padding-bottom: 0;
 }
 
-/* line 123, ../../../../assets/styles/components/_sidebar.scss */
+/* line 124, ../../../../assets/styles/components/_sidebar.scss */
 .show-mob-sidebar {
   display: block;
   width: 100%;
@@ -6669,13 +6670,13 @@ input[type="text"].sb-search-input {
   font-size: 36px;
   font-size: 2.25rem;
 }
-/* line 133, ../../../../assets/styles/components/_sidebar.scss */
+/* line 134, ../../../../assets/styles/components/_sidebar.scss */
 .show-mob-sidebar:after {
   font-size: 16px;
   font-size: 1rem;
   content: '\e836';
 }
-/* line 139, ../../../../assets/styles/components/_sidebar.scss */
+/* line 140, ../../../../assets/styles/components/_sidebar.scss */
 .show-mob-sidebar.active:after {
   content: '\e82a';
 }
